--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,3 +1,5 @@
+spring.application.name=CONFIG-Dev
+
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
