--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,6 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8061/eureka
+spring:
+  application:
+    name: Default-config
